--- a/prod/index.html
+++ b/prod/index.html
@@ -42,6 +42,7 @@
       <div class="right_block">
         <ul>
           <li><a href="#" class="nav_link">Доставка и оплата</a></li>
+          <li><a href="#" class="nav_link">Сертификаты</a></li>
           <li><a class="all_menu nav_link" href="#"><img src="img/icons/svg/menu.svg" alt="">Все меню</a></li>
         </ul>
       </div>
@@ -108,6 +109,70 @@
             <a href="#" class="btn">Смотреть</a>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col recomended">
+        <div class="inner">
+          <div class="title">Рекомендуем для вас</div>
+          <a href="#" class="btn btn_blue">Смотреть</a>
+        </div>
+      </div>
+      <div class="col item_product">
+        <a href="#" class="inner_product">
+          <div class="img_block">
+            <img src="img/product/product1.jpg" alt="">
+            <div class="favorites"></div>
+          </div>
+          <div class="vendor_code">Бюстье 1063</div>
+          <div class="price">145 BYN</div>
+        </a>
+      </div>
+      <div class="col item_product">
+        <a href="#" class="inner_product">
+          <div class="img_block">
+            <img src="img/product/product1.jpg" alt="">
+            <div class="favorites favorites_on"></div>
+          </div>
+          <div class="vendor_code">Бюстье 1063</div>
+          <div class="price">145 BYN</div>
+        </a>
+      </div>
+      <div class="col item_product">
+        <a href="#" class="inner_product">
+          <div class="img_block">
+           <div class="discount">-20%</div>
+            <img src="img/product/product4.jpg" alt="">
+            <div class="favorites"></div>
+          </div>
+          <div class="vendor_code">Бюстье 1063</div>
+          <div class="price">120 BYN <span class="old_price">145 BYN</span></div>
+        </a>
+      </div>
+      <div class="col item_product">
+        <a href="#" class="inner_product">
+          <div class="img_block">
+            <img src="img/product/product1.jpg" alt="">
+            <div class="favorites"></div>
+          </div>
+          <div class="vendor_code">Бюстье 1063</div>
+          <div class="price">145 BYN</div>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col video_block">
+        <div class="video_inner">
+		  <div class="video">
+			<video src="img/Serge.mp4" poster="img/video_poster.jpg" height="252"></video>
+		  </div>
+		</div>
+      </div>
+      <div class="col insta_block">
+        <a href="#" class="insta_inner">
+          <img src="img/socials/insta.png" alt="" class="icon">
+          <span>#serge_fashion</span>
+        </a>
       </div>
     </div>
   </div>
