--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,70 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col recomended">
+        <div class="inner">
+          <div class="title">Рекомендуем для вас</div>
+          <a href="#" class="btn btn_blue">Смотреть</a>
+        </div>
+      </div>
+      <div class="col item_product">
+        <a href="#" class="inner_product">
+          <div class="img_block">
+            <img src="img/product/product1.jpg" alt="">
+            <div class="favorites"></div>
+          </div>
+          <div class="vendor_code">Бюстье 1063</div>
+          <div class="price">145 BYN</div>
+        </a>
+      </div>
+      <div class="col item_product">
+        <a href="#" class="inner_product">
+          <div class="img_block">
+            <img src="img/product/product1.jpg" alt="">
+            <div class="favorites favorites_on"></div>
+          </div>
+          <div class="vendor_code">Бюстье 1063</div>
+          <div class="price">145 BYN</div>
+        </a>
+      </div>
+      <div class="col item_product">
+        <a href="#" class="inner_product">
+          <div class="img_block">
+           <div class="discount">-20%</div>
+            <img src="img/product/product4.jpg" alt="">
+            <div class="favorites"></div>
+          </div>
+          <div class="vendor_code">Бюстье 1063</div>
+          <div class="price">120 BYN <span class="old_price">145 BYN</span></div>
+        </a>
+      </div>
+      <div class="col item_product">
+        <a href="#" class="inner_product">
+          <div class="img_block">
+            <img src="img/product/product1.jpg" alt="">
+            <div class="favorites"></div>
+          </div>
+          <div class="vendor_code">Бюстье 1063</div>
+          <div class="price">145 BYN</div>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col video_block">
+        <div class="video_inner">
+		  <div class="video">
+			<video src="img/Serge.mp4" poster="img/video_poster.jpg" height="252"></video>
+		  </div>
+		</div>
+      </div>
+      <div class="col insta_block">
+        <a href="#" class="insta_inner">
+          <img src="img/socials/insta.png" alt="" class="icon">
+          <span>#serge_fashion</span>
+        </a>
+      </div>
+    </div>
   </div>
 </main>
 //= includes/footer.html
