--- a/prod/index.html
+++ b/prod/index.html
@@ -20,7 +20,7 @@
           <li><a href="#">.by</a></li>
           <li class="current"><a href="#">.ru</a></li>
         </ul>
-        <div class="phone"><a href="#">+375 (29) 689-14-56</a></div>
+        <div class="phone"><a href="tel:+375296891456">+375 (29) 689-14-56</a></div>
         <div class="working_hours">с 8-30 до 17-00, Пн-Пт</div>
       </div>
       <div class="right_block">
@@ -33,7 +33,7 @@
     <div class="header_bottom">
       <div class="left_block">
         <ul class="marker">
-          <li><a href="#" class="nav_link">Женщинам</a></li>
+          <li><a href="#" class="nav_link current">Женщинам</a></li>
           <li><a href="#" class="nav_link">Мужчинам</a></li>
           <li><a href="#" class="nav_link">Новинки</a></li>
           <li><a href="#" class="nav_link">Распродажа</a></li>
@@ -43,7 +43,7 @@
         <ul>
           <li><a href="#" class="nav_link">Доставка и оплата</a></li>
           <li><a href="#" class="nav_link">Сертификаты</a></li>
-          <li><a class="all_menu nav_link" href="#"><img src="img/icons/svg/menu.svg" alt="">Все меню</a></li>
+          <li><a class="all_menu nav_link js-toggle-menu" href="#"><img src="img/icons/svg/menu.svg" alt="">Все меню</a></li>
         </ul>
       </div>
     </div>
@@ -164,20 +164,119 @@
       <div class="col video_block">
         <div class="video_inner">
 		  <div class="video">
-			<video src="img/Serge.mp4" poster="img/video_poster.jpg" height="252"></video>
+			<video src="img/Serge.mp4" poster="img/video_poster.jpg" height="574"></video>
 		  </div>
 		</div>
       </div>
       <div class="col insta_block">
-        <a href="#" class="insta_inner">
+        <a href="https://www.instagram.com/sergefashion/" target="_blank" class="insta_inner">
           <img src="img/socials/insta.png" alt="" class="icon">
-          <span>#serge_fashion</span>
+          <span class="hashtag">#serge_fashion</span>
         </a>
       </div>
     </div>
   </div>
 </main>
-
+<footer>
+  <div class="footer_top">
+    <div class="wrap wrap_small">
+     <div class="row">
+       <div class="col footer_nav">
+        <div class="nav_item">
+         <div class="heading">Каталог</div>
+          <ul>
+            <li class="nav"><a href="#">Для женщин</a></li>
+            <li class="nav"><a href="#">Для мужчин</a></li>
+            <li class="nav"><a href="#">Новинки</a></li>
+            <li class="nav"><a href="#">Распродажа</a></li>
+          </ul>
+        </div>
+        <div class="nav_item">
+         <div class="heading">Сервис</div>
+          <ul>
+            <li class="nav"><a href="#">Акции</a></li>
+            <li class="nav"><a href="#">Доставка и оплата</a></li>
+            <li class="nav"><a href="#">Как сделать заказ</a></li>
+            <li class="nav"><a href="#">Возврат товара</a></li>
+            <li class="nav"><a href="#">Правила продажи</a></li>
+            <li class="nav"><a href="#">Пользовательское соглашение</a></li>
+          </ul>
+        </div>
+        <div class="nav_item">
+         <div class="heading">О компании</div>
+          <ul>
+            <li class="nav"><a href="#">Контакты</a></li>
+            <li class="nav"><a href="#">О магазине</a></li>
+            <li class="nav"><a href="#">Сертификаты</a></li>
+            <li class="nav"><a href="#">Корпоративный сайт SERGE</a></li>
+          </ul>
+        </div>
+        <div class="nav_item">
+         <div class="heading">Помощь</div>
+          <ul>
+            <li class="nav"><a href="#">Таблица размеров</a></li>
+            <li class="nav"><a href="#">Как ухаживать за бельем</a></li>
+          </ul>
+        </div> 
+       </div>
+       <div class="col social_block">
+         <div class="heading">Будьте вместе с нами!</div>
+         <ul class="social">
+           <li><a href="https://www.facebook.com/SERGE.Belarus" target="_blank"><img src="img/socials/facebook.png" alt=""></a></li>
+           <li><a href="https://vk.com/serge.minsk" target="_blank" class="vk"><img src="img/socials/vk.png" alt=""></a></li>
+           <li><a href="https://ok.ru/group/58369090846782" target="_blank"><img src="img/socials/ok.png" alt=""></a></li>
+           <li><a href="https://www.instagram.com/sergefashion/" target="_blank"><img src="img/socials/insta_footer.png" alt=""></a></li>
+         </ul>
+         <div class="phone"><a href="tel:+375296891456">+375 (29) 689-14-56</a></div>
+        <div class="working_hours">с 8-30 до 17-00, Пн-Пт</div>
+       </div>
+     </div>
+    </div>
+  </div>
+  <div class="footer_bottom">
+    <div class="wrap wrap_small">
+      <div class="text">©1996–2017. Все права защищены</div>
+      <img class="payment" src="img/payments.png" alt="">
+      <div class="text">ООО «Серж-фэшн», 220026, Беларусь, Минск, ул. Жилуновича, 2В, пом.4, УНН 192577696, ОКПО 382630675000, </div>
+      <div class="text">+375 (17) 345-36-95, Пн-Пт, 8:30—17:30, info@serge-fashion.by Дата регистрации в торговом реестре 24.01.2017 №365511.</div>
+    </div>
+  </div>
+</footer>
+<div class="overlay popup" id="js-menu">
+	<div class="popup_content">
+	<a href="#" class="popup_close">
+	 <img src="img/icons/svg/close.svg" alt="">
+	</a>
+    <div class="popup_content">
+      <ul>
+        <li><a href="#">Новинки</a></li>
+        <li><a href="#">Распродажа</a></li>
+        <li>
+          <a href="#">Для женщин</a>
+          <ul class="submenu">
+            <li><a href="#">Трусы</a></li>
+            <li><a href="#">Бюстье кружево</a></li>
+            <li><a href="#">Бюстье хлопок</a></li>
+            <li><a href="#">Боди</a></li>
+            <li><a href="#">Бельевые комплекты и майки</a></li>
+            <li><a href="#">Одежда для сна и отдыха</a></li>
+            <li><a href="#">Одежда для спорта</a></li>
+            <li><a href="#">Верхняя одежда</a></li>
+            <li><a href="#">Бюстгальтеры</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Для мужчин</a>
+          <ul class="submenu">
+            <li><a href="#">Нижнее бельё</a></li>
+            <li><a href="#">Одежда для сна и отдыха</a></li>
+            <li><a href="#">Верхняя одежда</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+	</div>
+</div>
 <script src="js/common.js"></script>
 </body>
 </html>
