--- a/src/index.html
+++ b/src/index.html
@@ -120,14 +120,14 @@
       <div class="col video_block">
         <div class="video_inner">
 		  <div class="video">
-			<video src="img/Serge.mp4" poster="img/video_poster.jpg" height="252"></video>
+			<video src="img/Serge.mp4" poster="img/video_poster.jpg" height="574"></video>
 		  </div>
 		</div>
       </div>
       <div class="col insta_block">
-        <a href="#" class="insta_inner">
+        <a href="https://www.instagram.com/sergefashion/" target="_blank" class="insta_inner">
           <img src="img/socials/insta.png" alt="" class="icon">
-          <span>#serge_fashion</span>
+          <span class="hashtag">#serge_fashion</span>
         </a>
       </div>
     </div>
