catalog page full

--- a/prod/catalog.html
+++ b/prod/catalog.html
@@ -64,98 +64,125 @@
    <div id="js-filters" class="filters_block">
    <div class="wrap wrap_small">
     <div class="filters_block_inner">
-      <div class="col">
-      <div class="label">
-        <img src="img/icons/sort.svg" alt="">
-        Сортировка:
-      </div>
-      <div class="filter">
-          <a class="js-dropdown" href="#">По названию</a>
-          <ul class="dropdown_block">
-            <li class="radio">
-              <input id="start" type="radio" name="name" checked>
-		      <label for="start"><span></span>А-Я</label>
-            </li>
-            <li class="radio">
-              <input id="end" type="radio" name="name">
-		      <label for="end"><span></span>Я-А</label>
-            </li>
-          </ul>
+        <div class="label">
+          <img src="img/icons/svg/sort.svg" alt="">
+          Сортировка:
         </div>
         <div class="filter">
-          <a class="js-dropdown" href="#">По цене</a>
-          <ul class="dropdown_block">
-            <li class="radio">
-              <input id="expensive" type="radio" name="cost">
-		      <label for="expensive"><span></span>Сначала дорогие</label>
-            </li>
-            <li class="radio">
-              <input id="cheap" type="radio" name="cost" checked>
-		      <label for="cheap"><span></span>Сначала дешевые</label>
-            </li>
-          </ul>
-        </div>
-    </div> 
-    <div class="col">
-      <div class="label">
-        <img src="img/icons/filtres.svg" alt="">
-        Фильтры:
-      </div>
-      <div class="filter">
-          <a class="js-dropdown" href="#">Цена</a>
-          <ul class="dropdown_block">
-            <li class="input"><span>от</span><input type="text" value="50"></li>
-            <li class="input"><span>до</span><input type="text" value="360"></li>
-          </ul>
+            <a class="js-dropdown" href="#">По названию</a>
+            <ul class="dropdown_block">
+              <li class="radio">
+                <input id="start" type="radio" name="name" checked>
+                <label for="start"><span></span>А-Я</label>
+              </li>
+              <li class="radio">
+                <input id="end" type="radio" name="name">
+                <label for="end"><span></span>Я-А</label>
+              </li>
+            </ul>
+          </div>
+        <div class="filter">
+            <a class="js-dropdown" href="#">По цене</a>
+            <ul class="dropdown_block">
+              <li class="radio">
+                <input id="expensive" type="radio" name="cost">
+                <label for="expensive"><span></span>Сначала дорогие</label>
+              </li>
+              <li class="radio">
+                <input id="cheap" type="radio" name="cost" checked>
+                <label for="cheap"><span></span>Сначала дешевые</label>
+              </li>
+            </ul>
+          </div>
+        <div class="label">
+          <img src="img/icons/svg/filtres.svg" alt="">
+          Фильтры:
         </div>
         <div class="filter">
-          <a class="js-dropdown" href="#">Цвет</a>
-          <ul class="dropdown_block">
-            <li class="checkbox_color">
-              <input id="color1" type="checkbox" name="color" checked>
-		      <label for="color1"><span><img src="img/patterns/color1.png" alt=""></span></label>
-            </li>
-            <li class="checkbox_color">
-              <input id="color2" type="checkbox" name="color">
-		      <label for="color2"><span><img src="img/patterns/color2.png" alt=""></span></label>
-            </li>
-            <li class="checkbox_color">
-              <input id="color3" type="checkbox" name="color">
-		      <label for="color3"><span><img src="img/patterns/color3.png" alt=""></span></label>
-            </li>
-          </ul>
-        </div>
+            <a class="js-dropdown" href="#">Цена</a>
+            <ul class="dropdown_block">
+              <li class="input"><span>от</span><input type="text" value="50"></li>
+              <li class="input"><span>до</span><input type="text" value="360"></li>
+            </ul>
+          </div>
         <div class="filter">
-          <a class="js-dropdown" href="#">Стиль</a>
-          <ul class="dropdown_block">
-            <li class="checkbox">
-              <input id="style1" type="checkbox" name="style" checked>
-		      <label for="style1"><span></span>Стиль1</label>
-            </li>
-            <li class="checkbox">
-              <input id="style2" type="checkbox" name="style">
-		      <label for="style2"><span></span>Стиль2</label>
-            </li>
-          </ul>
-        </div>
+            <a class="js-dropdown" href="#">Цвет</a>
+            <ul class="dropdown_block">
+              <li class="checkbox_color">
+                <input id="color1" type="checkbox" name="color" checked>
+                <label for="color1"><span><img src="img/color_patterns/blue-027.jpg" alt=""></span></label>
+              </li>
+              <li class="checkbox_color">
+                <input id="color2" type="checkbox" name="color">
+                <label for="color2"><span><img src="img/color_patterns/patt0183.jpg" alt=""></span></label>
+              </li>
+              <li class="checkbox_color">
+                <input id="color3" type="checkbox" name="color">
+                <label for="color3"><span><img src="img/color_patterns/stri0039.jpg" alt=""></span></label>
+              </li>
+            </ul>
+          </div>
         <div class="filter">
-          <a class="js-dropdown" href="#">Особенности</a>
-          <ul class="dropdown_block">
-             <li class="checkbox">
-              <input id="glass" type="checkbox" name="cost">
-		      <label for="glass"><span></span>Остекленная</label>
-            </li>
-            <li class="checkbox">
-              <input id="collapsible" type="checkbox" name="cost" checked>
-		      <label for="collapsible"><span></span>Складная</label>
-            </li>
-          </ul>
-        </div>
-    </div>
+            <a class="js-dropdown" href="#">Размер</a>
+            <ul class="dropdown_block">
+              <li class="checkbox">
+                <input id="style1" type="checkbox" name="style" checked>
+                <label for="style1"><span></span>XS</label>
+              </li>
+              <li class="checkbox">
+                <input id="style2" type="checkbox" name="style">
+                <label for="style2"><span></span>S</label>
+              </li>
+              <li class="checkbox">
+                <input id="style2" type="checkbox" name="style">
+                <label for="style2"><span></span>M</label>
+              </li>
+              <li class="checkbox">
+                <input id="style2" type="checkbox" name="style">
+                <label for="style2"><span></span>L</label>
+              </li>
+            </ul>
+          </div>
+        <div class="filter">
+            <a class="js-dropdown" href="#">Рост</a>
+            <ul class="dropdown_block">
+               <li class="checkbox">
+                <input id="glass" type="checkbox" name="cost">
+                <label for="glass"><span></span>165 см</label>
+              </li>
+              <li class="checkbox">
+                <input id="collapsible" type="checkbox" name="cost" checked>
+                <label for="collapsible"><span></span>170 см</label>
+              </li>
+            </ul>
+          </div>
+          <div class="search_block">
+            <div class="search">
+                <form action="">
+                    <input class="" name="q" type="text" placeholder="Найти">
+                    <button name="s" type="submit"></button>
+                </form>
+            </div>					
+          </div>
     </div>
    </div> 
    </div>
    <div class="wrap wrap_small">
+   <ul class="breadcrumbs">
+		<li><a href="#">Главная</a></li>
+		<li><a href="#">Женщинам</a></li>
+		<li class="last">Бюстье кружево</li>
+    </ul>
+    <div class="category_title">Бюстье кружево</div>
+    <div class="page_size">
+      <div class="label">Товары нас транице:</div>
+      <select name="" class="js-select">
+        <option value="">Все</option>
+        <option value="">10</option>
+        <option value="">20</option>
+        <option value="">30</option>
+      </select>
+    </div>
     <div class="row catalog_block">
       <div class="col item_product">
         <a href="#" class="inner_product">
