--- a/src/product.html
+++ b/src/product.html
@@ -25,32 +25,246 @@
         </div>
       </div>
       <div class="col descr_frame">
-       
+        <form action="/">
+           <div class="favorites favorites_on"></div>
+           <div class="title">Бюстье 1047/5</div>
+           <div class="price"><span class="num">29<sup>99</sup> </span>бел. руб.</div>
+           <ul class="attr">
+             <li><span class="key">Артикул</span> 1047/5</li>
+             <li><span class="key">Полотно</span> кружево</li>
+             <li><span class="key">Состав</span> па 49% вискоза 36% эластан 15%</li>
+             <li class="size_frame">
+               <span class="key">Размер</span>
+                 <ul class="size_block">
+                    <li>
+                        <input id="s_0" type="checkbox">
+                        <label class="size" for="s_0">
+                            <span>084</span>
+                        </label>
+                    </li>
+                    <li>
+                        <input id="s_1" type="checkbox">
+                        <label class="size" for="s_1">
+                            <span>088</span>
+                        </label>
+                    </li>
+                    <li>
+                        <input id="s_2" type="checkbox">
+                        <label class="size" for="s_2">
+                            <span>090</span>
+                        </label>
+                    </li>
+                    <li>
+                        <input id="s_3" type="checkbox">
+                        <label class="size" for="s_3">
+                            <span>092</span>
+                        </label>
+                    </li>
+                    <li>
+                        <input id="s_4" type="checkbox">
+                        <label class="size" for="s_4">
+                            <span>094</span>
+                        </label>
+                    </li>
+                    <li>
+                        <input id="s_4" type="checkbox">
+                        <label class="size" for="s_4">
+                            <span>094</span>
+                        </label>
+                    </li>
+                    <li>
+                        <input id="s_4" type="checkbox">
+                        <label class="size" for="s_4">
+                            <span>094</span>
+                        </label>
+                    </li>
+                </ul>
+                <a href="#" class="choose_size">Подобрать размер</a>
+             </li>
+             <li class="size_frame">
+               <span class="key">Рост</span>
+                 <ul class="size_block">
+                    <li>
+                        <input id="r_0" type="checkbox">
+                        <label class="size" for="r_0">
+                            <span>170</span>
+                        </label>
+                    </li>
+                    <li>
+                        <input id="r_1" type="checkbox">
+                        <label class="size" for="r_1">
+                            <span>164</span>
+                        </label>
+                    </li>
+                </ul>
+             </li>
+             <li class="color_frame">
+               <span class="key">Цвет</span>
+                 <ul class="color_block">
+                    <li>
+                        <input id="c_0" type="checkbox">
+                        <label class="color" for="c_0">
+                          <span>
+                            <img src="img/color_patterns/patt1.jpg" alt="">
+                          </span>  
+                        </label>
+                    </li>
+                    <li>
+                        <input id="c_1" type="checkbox">
+                        <label class="color" for="c_1">
+                          <span>
+                            <img src="img/color_patterns/patt1.jpg" alt="">
+                          </span>   
+                        </label>
+                    </li>
+                </ul>
+             </li>
+             <li class="calc_frame">
+               <span class="key">Количество</span>
+               <div class="number js-number" data-max-number="100">
+                  <button class="number__minus js-minus-number" type="button"><span></span></button>
+                  <input type="text" class="input" value="1">
+                  <button class="number__plus js-plus-number" type="button"><span></span></button>
+                </div> 
+             </li>
+           </ul>
+           <button type="submit" class="btn btn_blue"><img src="img/icons/svg/cart_btn.svg" alt="">Добавить в&nbsp;корзину</button>
+         </form>
+        <div class="additional_frame">
+          <ul>
+            <li>
+              <a href="#">
+                <div class="icon"><img src="img/product_add/time.svg" alt=""></div>
+                <div class="name">Режим работы</div>
+                <div class="add">С 8:30 до 17:00, ПН-ПТ</div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="icon"><img src="img/product_add/delivery.svg" alt=""></div>
+                <div class="name">Доставка</div>
+                <div class="add">Бесплатно от 50 бел. руб.</div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="icon"><img src="img/product_add/payment.svg" alt=""></div>
+                <div class="name">Оплата</div>
+                <div class="add">Наличными или картой</div>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="text_block">
+          <div class="subtitle">Описание</div>
+          <p>Брюки женские для спорта с карманами, выполнены из трикотажного полотна футер. Эластичный пояс Брюки женские для спорта с карманами, выполнены из трикотажного полотна футер. Эластичный пояс. Брюки женские для спорта с карманами, выполнены из трикотажного полотна футер. Эластичный пояс. Брюки женские для спорта с карманами, выполнены из трикотажного полотна футер. Эластичный пояс.</p>
+        </div>
       </div>
-      <div class="col additional_frame">
-        <ul>
-          <li>
-            <a href="#">
-              <div class="icon"><img src="img/product_add/time.svg" alt=""></div>
-              <div class="name">Режим работы</div>
-              <div class="add">С 8:30 до 17:00, ПН-ПТ</div>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="icon"><img src="img/product_add/delivery.svg" alt=""></div>
-              <div class="name">Доставка</div>
-              <div class="add">Бесплатно от 50 бел. руб.</div>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="icon"><img src="img/product_add/payment.svg" alt=""></div>
-              <div class="name">Оплата</div>
-              <div class="add">Наличными или картой</div>
-            </a>
-          </li>
+      <div class="tabs_block recomended_block">
+       <ul class="tabs_caption">
+          <li class="tab active">С этим товаром покупают</li>
+          <li class="tab">Вы недавно просматривали</li>
         </ul>
+        <div class="tabs_content active">
+          <div class="row add_prod">
+            <div class="col item_product">
+              <a href="#" class="inner_product">
+                <div class="img_block">
+                  <img src="img/product/product1.jpg" alt="">
+                  <div class="favorites"></div>
+                </div>
+                <div class="vendor_code">Бюстье 1063</div>
+                <div class="price">145 BYN</div>
+              </a>
+            </div>
+            <div class="col item_product">
+              <a href="#" class="inner_product">
+                <div class="img_block">
+                  <img src="img/product/product1.jpg" alt="">
+                  <div class="favorites favorites_on"></div>
+                </div>
+                <div class="vendor_code">Бюстье 1063</div>
+                <div class="price">145 BYN</div>
+              </a>
+            </div>
+            <div class="col item_product">
+              <a href="#" class="inner_product">
+                <div class="img_block">
+                 <div class="discount">-20%</div>
+                  <img src="img/product/product4.jpg" alt="">
+                  <div class="favorites"></div>
+                </div>
+                <div class="vendor_code">Бюстье 1063</div>
+                <div class="price">120 BYN <span class="old_price">145 BYN</span></div>
+              </a>
+            </div>
+            <div class="col item_product">
+              <a href="#" class="inner_product">
+                <div class="img_block">
+                  <img src="img/product/product1.jpg" alt="">
+                  <div class="favorites"></div>
+                </div>
+                <div class="vendor_code">Бюстье 1063</div>
+                <div class="price">145 BYN</div>
+              </a>
+            </div>
+            <div class="col item_product">
+              <a href="#" class="inner_product">
+                <div class="img_block">
+                  <img src="img/product/product1.jpg" alt="">
+                  <div class="favorites favorites_on"></div>
+                </div>
+                <div class="vendor_code">Бюстье 1063</div>
+                <div class="price">145 BYN</div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="tabs_content">
+          <div class="row add_prod">
+            <div class="col item_product">
+              <a href="#" class="inner_product">
+                <div class="img_block">
+                  <img src="img/product/product1.jpg" alt="">
+                  <div class="favorites"></div>
+                </div>
+                <div class="vendor_code">Бюстье 1063</div>
+                <div class="price">145 BYN</div>
+              </a>
+            </div>
+            <div class="col item_product">
+              <a href="#" class="inner_product">
+                <div class="img_block">
+                  <img src="img/product/product1.jpg" alt="">
+                  <div class="favorites favorites_on"></div>
+                </div>
+                <div class="vendor_code">Бюстье 1063</div>
+                <div class="price">145 BYN</div>
+              </a>
+            </div>
+            <div class="col item_product">
+              <a href="#" class="inner_product">
+                <div class="img_block">
+                 <div class="discount">-20%</div>
+                  <img src="img/product/product4.jpg" alt="">
+                  <div class="favorites"></div>
+                </div>
+                <div class="vendor_code">Бюстье 1063</div>
+                <div class="price">120 BYN <span class="old_price">145 BYN</span></div>
+              </a>
+            </div>
+            <div class="col item_product">
+              <a href="#" class="inner_product">
+                <div class="img_block">
+                  <img src="img/product/product1.jpg" alt="">
+                  <div class="favorites"></div>
+                </div>
+                <div class="vendor_code">Бюстье 1063</div>
+                <div class="price">145 BYN</div>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
