--- a/prod/index.html
+++ b/prod/index.html
@@ -35,6 +35,8 @@
         <ul class="marker">
           <li><a href="#" class="nav_link">Женщинам</a></li>
           <li><a href="#" class="nav_link">Мужчинам</a></li>
+        </ul>
+        <ul class="marker">
           <li><a href="#" class="nav_link">Новинки</a></li>
           <li><a href="#" class="nav_link">Распродажа</a></li>
         </ul>
@@ -111,7 +113,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row recomended_row">
       <div class="col recomended">
         <div class="inner">
           <div class="title">Рекомендуем для вас</div>
@@ -164,7 +166,7 @@
       <div class="col video_block">
         <div class="video_inner">
 		  <div class="video">
-			<video src="img/Serge.mp4" poster="img/video_poster.jpg" height="574"></video>
+			<video src="img/Serge.mp4" poster="img/video_poster.jpg"></video>
 		  </div>
 		</div>
       </div>
