--- a/prod/product.html
+++ b/prod/product.html
@@ -32,8 +32,10 @@
     <div class="header_bottom">
       <div class="left_block">
         <ul class="marker">
-          <li><a href="#" class="nav_link current">Женщинам</a></li>
+          <li><a href="#" class="nav_link">Женщинам</a></li>
           <li><a href="#" class="nav_link">Мужчинам</a></li>
+        </ul>
+        <ul class="marker">
           <li><a href="#" class="nav_link">Новинки</a></li>
           <li><a href="#" class="nav_link">Распродажа</a></li>
         </ul>
@@ -184,7 +186,7 @@
               <a href="#">
                 <div class="icon"><img src="img/product_add/delivery.svg" alt=""></div>
                 <div class="name">Доставка</div>
-                <div class="add">Бесплатно от 50 бел. руб.</div>
+                <div class="add">Бесплатно от 50 бел.&nbsp;руб.</div>
               </a>
             </li>
             <li>
