--- a/src/product.html
+++ b/src/product.html
@@ -143,7 +143,7 @@
               <a href="#">
                 <div class="icon"><img src="img/product_add/delivery.svg" alt=""></div>
                 <div class="name">Доставка</div>
-                <div class="add">Бесплатно от 50 бел. руб.</div>
+                <div class="add">Бесплатно от 50 бел.&nbsp;руб.</div>
               </a>
             </li>
             <li>
