--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row recomended_row">
       <div class="col recomended">
         <div class="inner">
           <div class="title">Рекомендуем для вас</div>
@@ -120,7 +120,7 @@
       <div class="col video_block">
         <div class="video_inner">
 		  <div class="video">
-			<video src="img/Serge.mp4" poster="img/video_poster.jpg" height="574"></video>
+			<video src="img/Serge.mp4" poster="img/video_poster.jpg"></video>
 		  </div>
 		</div>
       </div>
