--- a/prod/catalog.html
+++ b/prod/catalog.html
@@ -32,7 +32,7 @@
     <div class="header_bottom">
       <div class="left_block">
         <ul class="marker">
-          <li><a href="#" class="nav_link">Женщинам</a></li>
+          <li><a href="#" class="nav_link current">Женщинам</a></li>
           <li><a href="#" class="nav_link">Мужчинам</a></li>
         </ul>
         <ul class="marker">
@@ -85,7 +85,7 @@
               </li>
             </ul>
           </div>
-        <div class="filter">
+          <div class="filter">
             <a class="js-dropdown" href="#">По цене</a>
             <ul class="dropdown_block">
               <li class="radio">
