--- a/prod/product.html
+++ b/prod/product.html
@@ -32,7 +32,7 @@
     <div class="header_bottom">
       <div class="left_block">
         <ul class="marker">
-          <li><a href="#" class="nav_link">Женщинам</a></li>
+          <li><a href="#" class="nav_link current">Женщинам</a></li>
           <li><a href="#" class="nav_link">Мужчинам</a></li>
         </ul>
         <ul class="marker">
